oplossingen/stap-2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sim-voorbeeld
  namespace: backend-workshop
  labels:
    workshop-owner: voorbeeld
spec:
  type: ClusterIP
  selector:
    app: sim-voorbeeld
  ports:
    - name: http
      port: 80
      targetPort: http
