oplossingen/stap-2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sim-voorbeeld
  namespace: backend-workshop
  labels:
    workshop-owner: voorbeeld
spec:
  ingressClassName: voorbeeld-class

  rules:
    - host: sim-voorbeeld.workshop.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sim-voorbeeld
                port:
                  number: 80
